[3.2] Added javadocs and errors in frontend. Fixed bug where scrollbar is not set to top when navigating to news detail.

--- a/frontend/src/app/components/news/news-detail/news-detail.component.scss
+++ b/frontend/src/app/components/news/news-detail/news-detail.component.scss
@@ -38,10 +38,6 @@
   color: white;
   display: flex;
   justify-content: center;
-  /*&:hover {
-    cursor:zoom-in;
-  }
-   */
 }
 
 .side-panel {
